proc-macros/tests/ui/incorrect/sub/sub_no_name.stderr
error: Subscription methods must not be `async`
 --> $DIR/sub_no_name.rs:6:2
  |
6 | /     #[subscription(unsub = "unsub", item = String)]
7 | |     async fn async_method(&self) -> u8;
  | |_______________________________________^
